--- a/site/style/style.css
+++ b/site/style/style.css
@@ -19,7 +19,7 @@ body
 #menu a
 {
     text-decoration: none;
-    background-color: blue;
+    background-color: red;
     color: white;
     display: block;
     width: 100px;
