--- a/site/style/style.css
+++ b/site/style/style.css
@@ -1,6 +1,7 @@
 body
 {
-    background-color: burlywood;
+    background-color: tan;
+    font-size: 15px;
 /*    margin-left: 50px;*/
 }
 
@@ -37,6 +38,6 @@ body
 
 #content
 {
-    padding-top: 25px;
+    padding-top: 15px;
 
 }
