--- a/site/style/style.css
+++ b/site/style/style.css
@@ -26,6 +26,7 @@ body
     width: 100px;
     padding: 10px;
     margin: 5px;
+    border: 2px solid #000;
     border-radius: 10px;
 }
 
@@ -36,8 +37,15 @@ body
 
 }
 
-#content
+.content
 {
-    padding-top: 15px;
-
+    background-color: red;
+    color: white;
+    height: auto;
+    width: 200px;
+    display: inline-block;
+    padding: 2%;
+    border-radius: 10px;
+    margin-top: 30px;
 }
+
