--- a/site/style/style.css
+++ b/site/style/style.css
@@ -30,6 +30,12 @@ body
     border-radius: 10px;
 }
 
+#menu a.current_page
+{
+    background-color: green;
+    margin-left: 30px;
+}
+
 #menu a:hover
 {
     background-color: gray;
