--- a/site/style/style.css
+++ b/site/style/style.css
@@ -76,6 +76,7 @@ body
 {
     width: 300px;
     margin: 5px;
+    margin-top: 0;
     border-radius: 10px;
     background-color: yellow;
     padding: 5px;
